--- a/src/view/main_stage.fxml
+++ b/src/view/main_stage.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.layout.Region?>
 <?import view.tabs.tab1.Tab1Controller?>
+<?import view.tabs.tab2.Tab2Controller?>
 <VBox spacing="10" fx:controller="view.MainController"
       xmlns:fx="http://javafx.com/fxml">
     <padding><Insets right="5" bottom="25" left="5"/></padding>
@@ -23,6 +24,7 @@
         <!--<Content/>-->
         <TabPane HBox.hgrow="ALWAYS">
             <Tab1Controller/>
+            <Tab2Controller/>
             <Tab text="Tav 2" closable="false"/>
         </TabPane>
         <VBox>
