Added pgm and ppm file support. Images refactor

--- a/src/view/tabs/tab1/tab_1.fxml
+++ b/src/view/tabs/tab1/tab_1.fxml
@@ -14,6 +14,7 @@
             <Text VBox.vgrow="ALWAYS" fx:id="secondaryImagePixelValueText"/>
             <Text VBox.vgrow="ALWAYS" fx:id="averagesInfoText"/>
             <Region VBox.vgrow="ALWAYS"/>
+            <Button text="RGB->HSV" onAction="#showHSV"/>
             <Button text="Get avg and paint" onAction="#getAverageAndPaint"/>
             <Button text="Copy from main to sec" onAction="#copyFromMainToSec"/>
             <HBox spacing="10" alignment="bottom_left">
