--- a/src/view/tabs/tab2/tab_2.fxml
+++ b/src/view/tabs/tab2/tab_2.fxml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.control.Button?>
 
-<fx:root text="Modify" closable="false" type="javafx.scene.control.Tab" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
-<VBox>
-    <Button text="Circle" onAction="#createCircle"/>
-    <Button text="Square" onAction="#createSquare"/>
-    <Button text="Color gradient" onAction="#createColorGradient"/>
-    <Button text="BW gradient" onAction="#createBlackAndWhiteGradient"/>
-</VBox>
+<fx:root text="Operations" closable="false" type="javafx.scene.control.Tab" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
+        <VBox>
+            <Text VBox.vgrow="ALWAYS" fx:id="errorText"/>
+            <Region VBox.vgrow="ALWAYS"/>
+            <Button text="Add" onAction="#addImages"/>
+            <Button text="Subtract" onAction="#subtractImages"/>
+            <Button text="Dynamic Range Compression" onAction="#drc"/>
+        </VBox>
 </fx:root>
