Added contrast, umbral, negative and single color images

--- a/src/view/menu/image/create_menu.fxml
+++ b/src/view/menu/image/create_menu.fxml
@@ -6,4 +6,6 @@
     <MenuItem text="Square" onAction="#createSquare"/>
     <MenuItem text="Color gradient" onAction="#createColorGradient"/>
     <MenuItem text="BW gradient" onAction="#createBlackAndWhiteGradient"/>
+    <MenuItem text="Black image" onAction="#createBlack"/>
+    <MenuItem text="White image" onAction="#createWhite"/>
 </fx:root>
