--- a/src/view/main_stage.fxml
+++ b/src/view/main_stage.fxml
@@ -11,6 +11,7 @@
 <?import view.menu.image.CreateController?>
 <?import view.tabs.tab2.Tab2Controller?>
 
+<?import view.tabs.tab3.Tab3Controller?>
 <VBox spacing="10" fx:controller="view.MainController"
       xmlns:fx="http://javafx.com/fxml">
     <padding><Insets right="5" bottom="25" left="5"/></padding>
@@ -22,6 +23,7 @@
         <TabPane HBox.hgrow="ALWAYS">
             <Tab1Controller/>
             <Tab2Controller/>
+            <Tab3Controller/>
         </TabPane>
         <VBox>
             <ImageController HBox.hgrow="ALWAYS"/>
