--- a/src/view/tabs/tab2/tab_2.fxml
+++ b/src/view/tabs/tab2/tab_2.fxml
@@ -7,15 +7,25 @@
 <?import javafx.scene.control.Button?>
 
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <fx:root text="Operations" closable="false" type="javafx.scene.control.Tab" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
         <VBox>
             <Text VBox.vgrow="ALWAYS" fx:id="errorText"/>
             <Region VBox.vgrow="ALWAYS"/>
-            <Button text="Add" onAction="#addImages"/>
-            <Button text="Subtract" onAction="#subtractImages"/>
-            <Button text="Dynamic Range Compression" onAction="#drc"/>
-            <Button text="Negative" onAction="#negative"/>
-            <Button text="Histogram" onAction="#showHistogram"/>
+            <HBox>
+                <Button text="Add" onAction="#addImages"/>
+                <Button text="Subtract" onAction="#subtractImages"/>
+            </HBox>
+            <HBox>
+                <Button text="Dynamic Range Compression" onAction="#drc"/>
+                <Button text="Negative" onAction="#negative"/>
+            </HBox>
+            <HBox>
+                <Button text="Histogram" onAction="#showHistogram"/>
+                <Button text="Equalize histogram" onAction="#equalizeHistogram"/>
+            </HBox>
+            <Region VBox.vgrow="ALWAYS"/>
             <Text text="Contrast" textAlignment="CENTER"/>
             <Slider fx:id="contrastSlider" onMouseReleased="#contrastDrag" max="255" min="0" blockIncrement="32" showTickLabels="true"
                     showTickMarks="true" majorTickUnit="32"/>
