--- a/src/view/images/images_area.fxml
+++ b/src/view/images/images_area.fxml
@@ -3,8 +3,13 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.image.ImageView?>
 
+<?import javafx.scene.control.Button?>
 <fx:root id="FileMenu" prefWidth="250" prefHeight="300" type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
-    <ImageView fx:id="mainImageView" onMouseClicked="#onMainImageClicked" />
+    <HBox>
+        <ImageView fx:id="mainImageView" onMouseClicked="#onMainImageClicked" />
+        <Button text="B" onAction="#previousImage"/>
+        <Button text="P" onAction="#addToSecondWindow"/>
+    </HBox>
     <ImageView fx:id="secondaryImageView" onMouseClicked="#onSecondaryImageClicked"/>
 </fx:root>
 
