--- a/src/view/tabs/tab2/tab_2.fxml
+++ b/src/view/tabs/tab2/tab_2.fxml
@@ -13,6 +13,11 @@
         <VBox>
             <Text VBox.vgrow="ALWAYS" fx:id="errorText"/>
             <Region VBox.vgrow="ALWAYS"/>
+            <Text text="PotencyFunction"/>
+            <HBox>
+                <TextField text="Number.." fx:id="potencyFunctionPhi"/>
+                <Button text="Apply" onAction="#potencyFunction"/>
+            </HBox>
             <HBox>
                 <Button text="Add" onAction="#addImages"/>
                 <Button text="Subtract" onAction="#subtractImages"/>
