Added a button to open all 3 prewitt operators in a 2nd window

--- a/src/view/tabs/tab3/tab_3.fxml
+++ b/src/view/tabs/tab3/tab_3.fxml
@@ -37,6 +37,7 @@
                         <Button text="Y" onAction="#prewittOperatorY"/>
                         <Button text="X" onAction="#prewittOperatorX"/>
                         <Button text="Both" onAction="#prewittOperatorBoth"/>
+                        <Button text="3 imgs" onAction="#prewittOperatorOpen3"/>
                     </HBox>
                 </TitledPane>
                 <!--Median-->
