--- a/src/view/main_stage.fxml
+++ b/src/view/main_stage.fxml
@@ -13,6 +13,7 @@
 
 <?import view.tabs.tab3.Tab3Controller?>
 <?import view.menu.openimage.OpenImageController?>
+<?import javafx.scene.layout.Region?>
 <VBox spacing="10" fx:controller="view.MainController"
       xmlns:fx="http://javafx.com/fxml">
     <padding><Insets right="5" bottom="25" left="5"/></padding>
