--- a/src/view/main_stage.fxml
+++ b/src/view/main_stage.fxml
@@ -14,6 +14,7 @@
 <?import view.tabs.tab3.Tab3Controller?>
 <?import view.menu.openimage.OpenImageController?>
 <?import javafx.scene.layout.Region?>
+<?import view.tabs.tab4.Tab4Controller?>
 <VBox spacing="10" fx:controller="view.MainController"
       xmlns:fx="http://javafx.com/fxml">
     <padding><Insets right="5" bottom="25" left="5"/></padding>
@@ -27,6 +28,7 @@
             <Tab1Controller/>
             <Tab2Controller/>
             <Tab3Controller/>
+            <Tab4Controller/>
         </TabPane>
         <VBox>
             <ImageController HBox.hgrow="ALWAYS"/>
