--- a/src/view/main_stage.fxml
+++ b/src/view/main_stage.fxml
@@ -13,8 +13,8 @@
 
 <?import view.tabs.tab3.Tab3Controller?>
 <?import view.menu.openimage.OpenImageController?>
-<?import javafx.scene.layout.Region?>
 <?import view.tabs.tab4.Tab4Controller?>
+<?import view.tabs.tab5.Tab5Controller?>
 <VBox spacing="10" fx:controller="view.MainController"
       xmlns:fx="http://javafx.com/fxml">
     <padding><Insets right="5" bottom="25" left="5"/></padding>
@@ -29,6 +29,7 @@
             <Tab2Controller/>
             <Tab3Controller/>
             <Tab4Controller/>
+            <Tab5Controller/>
         </TabPane>
         <VBox>
             <ImageController HBox.hgrow="ALWAYS"/>
